# arduino-prototypo

./: .gitignore  CMakeLists.txt
carbot/: CMakeLists.txt  CarBot.cpp  CarBot.h  IRobot.h  main.cpp
cmake/Platform/: Arduino.cmake
doc/: README.md
example/: CMakeLists.txt  blink_lib.cpp
libraries/Ultrasonic/src/: Ultrasonic.h
prototypo/: AutonomousStrategy.cpp  AutonomousStrategy.h  CMakeLists.txt  CarBot.h  MovingStrategy.h  Prototypo.cpp  Prototypo.h  main.cpp
